--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,58 @@
-# Universal Payment Protocol Environment Variables
+# Universal Payment Protocol Environment Configuration
+# Copy this file to .env and fill in your actual values
 
-# Required - Stripe Configuration
+# Stripe Configuration (Required)
+# Get these from your Stripe Dashboard: https://dashboard.stripe.com/apikeys
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
-# Optional - Server Configuration
+# Security Configuration (Required)
+# Generate using: node scripts/generate-encryption-key.js
+# Use AES-256 key (64 hex characters) for maximum security
+ENCRYPTION_KEY=your_generated_encryption_key_here
+
+# Server Configuration (Optional)
 PORT=3000
 FRONTEND_URL=http://localhost:3000
 NODE_ENV=development
 
-# Optional - Advanced Features
-WEBHOOK_SECRET=whsec_your_webhook_secret
-ENCRYPTION_KEY=your_encryption_key_here
+# Database Configuration (Optional - for future use)
+# DATABASE_URL=postgresql://username:password@localhost:5432/upp_database
+
+# Monitoring Configuration (Optional)
+# PROMETHEUS_PORT=9090
+# GRAFANA_PORT=3001
+
+# Logging Configuration (Optional)
+# LOG_LEVEL=info
+# LOG_FORMAT=json
+
+# Rate Limiting (Optional)
+# RATE_LIMIT_WINDOW_MS=900000
+# RATE_LIMIT_MAX_REQUESTS=100
+
+# Currency API Configuration (Optional)
+# EXCHANGE_RATE_API_KEY=your_exchange_rate_api_key
+# CURRENCY_PROVIDER=fixer.io
+
+# Security Headers (Optional)
+# CORS_ORIGIN=https://yourdomain.com
+# CSP_DIRECTIVES=default-src 'self'
+
+# Payment Gateway Configuration (Optional - for additional gateways)
+# PAYPAL_CLIENT_ID=your_paypal_client_id
+# SQUARE_APPLICATION_ID=your_square_app_id
+
+# AWS Configuration (Optional - for cloud deployment)
+# AWS_REGION=us-west-2
+# AWS_S3_BUCKET=your-upp-bucket
+# AWS_CLOUDFRONT_DOMAIN=your-cloudfront-domain
+
+# Notification Services (Optional)
+# SENDGRID_API_KEY=your_sendgrid_api_key
+# TWILIO_ACCOUNT_SID=your_twilio_sid
+# SLACK_WEBHOOK_URL=your_slack_webhook
+
+# Analytics (Optional)
+# GOOGLE_ANALYTICS_ID=GA-XXXXXXXXX
+# MIXPANEL_TOKEN=your_mixpanel_token
