--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node --esm server/index.ts",
+    "dev": "PORT=3001 node -r dotenv/config dist/server/index.js",
     "build": "tsc",
     "start": "node dist/server/index.js",
     "demo": "ts-node --esm src/demo/UPPDemo.ts",
     "test": "vitest",
     "lint": "eslint src --ext .ts",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "check:compliance": "node scripts/compliance-check.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
@@ -21,14 +22,18 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "stripe": "^18.3.0",
+    "validator": "^13.15.15",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.9",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.15.2",
     "eslint": "^8.45.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
