--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
   "name": "universal-payment-protocol",
   "version": "1.0.0",
-  "description": "Revolutionary payment processing that works with ANY internet-connected device",
-  "main": "dist/index.js",
-  "type": "module",
+  "description": "Universal Payment Protocol - Any Device + Internet = Payment Terminal",
+  "main": "dist/server/index.js",
   "scripts": {
-    "dev": "node --import tsx/esm server/index.ts",
-    "build": "tsc",
     "start": "node dist/server/index.js",
-    "demo": "tsx src/demo/UPPDemo.ts",
+    "dev": "tsx watch server/index.ts",
+    "build": "tsc && cp -r src/modules/payments/card-demo.html dist/src/modules/payments/",
     "test": "vitest",
-    "lint": "eslint src --ext .ts",
-    "type-check": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/pg": "^8.15.4",
-    "@types/qrcode": "^1.5.5",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^7.0.0",
-    "ioredis": "^5.6.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
-    "qrcode": "^1.5.4",
-    "stripe": "^18.3.0",
-    "winston": "^3.17.0",
-    "zod": "^3.22.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.19.9",
-    "@types/supertest": "^6.0.3",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-import": "^2.32.0",
-    "supertest": "^7.1.3",
-    "tsx": "^4.7.0",
-    "typescript": "^5.0.0",
-    "vitest": "^0.34.6"
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "keywords": [
     "payment",
     "protocol",
     "universal",
     "stripe",
-    "iot",
-    "smart-tv",
-    "mobile",
-    "hawaii"
+    "pci-dss",
+    "fintech"
   ],
-  "author": "Kepa & Development Team",
-  "license": "MIT"
+  "author": "UPP Team",
+  "license": "MIT",
+  "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.5",
+    "@types/uuid": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "pg": "^8.11.1",
+    "redis": "^4.6.7",
+    "stripe": "^12.12.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.10.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vitest/coverage-v8": "^0.34.1",
+    "eslint": "^8.45.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
