fix: Resolve npm dependency issues and improve build process
- Regenerate package-lock.json to fix version conflicts and missing dependencies
- Update render.yaml to use 'npm install' instead of 'npm ci' for initial deployment
- Add .nvmrc to specify Node.js 20 for consistent builds
- Fix build script with cross-platform postbuild hook for demo file copy
- Add missing card-demo.html file with comprehensive payment testing interface
- Remove embedded openapi-mcp-server git repository to avoid conflicts

This resolves the npm ci errors during Render deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/server/index.js",
     "dev": "tsx watch server/index.ts",
-    "build": "tsc && cp -r src/modules/payments/card-demo.html dist/src/modules/payments/",
+    "build": "tsc",
+    "postbuild": "node -e \"const fs=require('fs'); const path=require('path'); const src='src/modules/payments/card-demo.html'; const dest='dist/src/modules/payments/card-demo.html'; try { fs.mkdirSync(path.dirname(dest), {recursive:true}); if(fs.existsSync(src)) fs.copyFileSync(src, dest); } catch(e) { console.log('Demo file copy skipped:', e.message); }\"",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx",
