--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: upp-server
     runtime: node
     plan: free # Use 'free' for development, upgrade to 'standard' for production
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build
     startCommand: npm start
     healthCheckPath: /health
     envVars:
