--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "type-check": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "keywords": [
     "payment",
@@ -53,6 +53,7 @@
     "@vitest/coverage-v8": "^0.34.1",
     "eslint": "^8.45.0",
     "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
     "lint-staged": "^13.2.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
