fix: Remove prepare script to eliminate Husky CI errors
- Remove 'prepare' script that was causing husky/is-ci not found errors
- Husky is only needed for local development Git hooks, not production
- This allows clean deployment without Git hook setup in CI/production
- Developers can manually run 'npx husky install' if needed locally

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "type-check": "tsc --noEmit",
-    "prepare": "is-ci || husky install"
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "payment",
@@ -53,7 +52,6 @@
     "@vitest/coverage-v8": "^0.34.1",
     "eslint": "^8.45.0",
     "husky": "^8.0.3",
-    "is-ci": "^3.0.1",
     "lint-staged": "^13.2.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
