feat: Complete Universal Payment Protocol implementation and fixes
- Fixed all TypeScript compilation errors and type safety issues
- Migrated from ioredis to official redis client library
- Updated Stripe API version to compatible version
- Added missing dependencies (qrcode, supertest)
- Enhanced type definitions and interfaces
- Fixed syntax errors in demo modules
- Implemented comprehensive test mocking for Redis
- Added security enhancements and GitHub workflows
- Improved error handling and validation
- Enhanced demo system with comprehensive payment scenarios
- All tests now pass and server compiles successfully

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,7 +55,8 @@
   },
   "include": [
     "src/**/*",
-    "server/**/*"
+    "server/**/*",
+    "vitest.config.ts"
   ],
   "exclude": [
     "node_modules",
