--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1",
+    "qrcode": "^1.5.3",
     "redis": "^4.6.7",
     "stripe": "^12.12.0",
     "uuid": "^9.0.0",
@@ -49,12 +50,15 @@
   },
   "devDependencies": {
     "@types/pg": "^8.10.2",
+    "@types/qrcode": "^1.5.2",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vitest/coverage-v8": "^0.34.1",
     "eslint": "^8.45.0",
+    "eslint-plugin-import": "^2.32.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vitest": "^0.34.1"
