fix: Exclude vitest.config.ts from TypeScript build compilation
- Removed vitest.config.ts from tsconfig.json include list
- Added vitest.config.ts to exclude list for extra safety
- Prevents build errors related to vitest/config module resolution
- Ensures clean build process for production deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,14 +55,14 @@
   },
   "include": [
     "src/**/*",
-    "server/**/*",
-    "vitest.config.ts"
+    "server/**/*"
   ],
   "exclude": [
     "node_modules",
     "dist",
     "**/*.test.ts",
     "**/*.spec.ts",
-    "src/__tests__/**/*"
+    "src/__tests__/**/*",
+    "vitest.config.ts"
   ]
 }
