feat: Implement comprehensive AI error handler system with auto-fix generation
- Add AI-powered error monitoring and analysis
- Integrate Claude 3 Sonnet and GPT-4 for error diagnosis
- Implement automatic pull request creation with fixes
- Add performance and security monitoring
- Create interactive AI monitoring dashboard
- Include comprehensive documentation and setup guide
- Support real-time error capture and analysis
- Add manual error testing and analysis tools

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server/index.js",
     "dev": "tsx watch server/index.ts",
     "build": "tsc",
-    "postbuild": "node -e \"const fs=require('fs'); const path=require('path'); const files=['src/modules/payments/card-demo.html', 'src/demo/DemoDashboard.html', 'src/demo/MobileAppSimulator.html', 'src/demo/UPPLandingPage.html']; files.forEach(file => { const src=file; const dest='dist/'+file; try { fs.mkdirSync(path.dirname(dest), {recursive:true}); if(fs.existsSync(src)) { fs.copyFileSync(src, dest); console.log('Copied:', src, '->', dest); } else { console.log('Source file not found:', src); } } catch(e) { console.log('File copy failed for', src, ':', e.message); } });\"",
+    "postbuild": "node -e \"const fs=require('fs'); const path=require('path'); const files=['src/modules/payments/card-demo.html', 'src/demo/DemoDashboard.html', 'src/demo/MobileAppSimulator.html', 'src/demo/UPPLandingPage.html', 'src/monitoring/AIMonitoringDashboard.html']; files.forEach(file => { const src=file; const dest='dist/'+file; try { fs.mkdirSync(path.dirname(dest), {recursive:true}); if(fs.existsSync(src)) { fs.copyFileSync(src, dest); console.log('Copied:', src, '->', dest); } else { console.log('Source file not found:', src); } } catch(e) { console.log('File copy failed for', src, ':', e.message); } });\"",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx",
@@ -27,6 +27,9 @@
   "author": "UPP Team",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.18.0",
+    "octokit-plugin-create-pull-request": "^5.0.0",
+    "@octokit/rest": "^21.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -42,6 +45,7 @@
     "express-rate-limit": "^6.8.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
+    "openai": "^4.28.0",
     "pg": "^8.11.1",
     "qrcode": "^1.5.3",
     "redis": "^4.6.7",
