--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "type-check": "tsc --noEmit",
     "security:check": "node scripts/security-check.js",
     "security:audit": "npm audit && npm run security:check"
@@ -28,7 +30,6 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.18.0",
-    "octokit-plugin-create-pull-request": "^5.0.0",
     "@octokit/rest": "^21.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
@@ -45,6 +46,7 @@
     "express-rate-limit": "^6.8.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
+    "octokit-plugin-create-pull-request": "^5.0.0",
     "openai": "^4.28.0",
     "pg": "^8.11.1",
     "qrcode": "^1.5.3",
@@ -55,13 +57,16 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^0.34.1",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "prettier": "^3.6.2",
     "supertest": "^6.3.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
