--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "alwaysStrict": true,
     
     // Additional Checks  
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "exactOptionalPropertyTypes": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": false, // TODO: Enable this after fixing optional property issues
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
