🔧 Fix dependency conflicts and improve system stability
- Fix Vitest dependency conflict (v0.34.1 → v1.0.0)
- Update @vitest/coverage-v8 to v1.0.0
- Add --legacy-peer-deps to Dockerfile for production builds
- Fix TruffleHog security scan configuration
- Improve AI monitoring dashboard error handling
- Make payment processing more robust in demo mode
- Remove 'Powered by Node.js' branding from UI
- Add comprehensive device adapters for real-world integration
- Enhance API key management and authentication
- Update package-lock.json with compatible versions

All interactive features now working:
✅ Demo Dashboard
✅ AI Monitoring Dashboard
✅ Payment Processing
✅ Device Registration
✅ Security Scans

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -120,7 +120,7 @@ jobs:
           path: "."
           base: "HEAD~1"
           head: "HEAD"
-          extra_args: "--only-verified --format json"
+          extra_args: "--only-verified"
 
       - name: Run additional secrets detection
         run: |
