--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server/index.js",
     "dev": "tsx watch server/index.ts",
     "build": "tsc",
-    "postbuild": "node -e \"const fs=require('fs'); const path=require('path'); const files=['src/modules/payments/card-demo.html', 'src/demo/DemoDashboard.html', 'src/demo/MobileAppSimulator.html', 'src/demo/UPPLandingPage.html', 'src/monitoring/AIMonitoringDashboard.html']; files.forEach(file => { const src=file; const dest='dist/'+file; try { fs.mkdirSync(path.dirname(dest), {recursive:true}); if(fs.existsSync(src)) { fs.copyFileSync(src, dest); console.log('Copied:', src, '->', dest); } else { console.log('Source file not found:', src); } } catch(e) { console.log('File copy failed for', src, ':', e.message); } });\"",
+    "postbuild": "mkdir -p dist/src/demo && cp src/demo/DemoDashboard.html dist/src/demo/ && cp src/demo/MobileAppSimulator.html dist/src/demo/ && cp src/demo/UPPLandingPage.html dist/src/demo/ && cp src/demo/APIKeyRegistration.html dist/src/demo/ && mkdir -p dist/src/monitoring && cp src/monitoring/AIMonitoringDashboard.html dist/src/monitoring/ && mkdir -p dist/src/modules/payments && cp src/modules/payments/card-demo.html dist/src/modules/payments/",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx",
@@ -57,7 +57,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/coverage-v8": "^1.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-import": "^2.32.0",
     "husky": "^8.0.3",
@@ -65,7 +65,7 @@
     "supertest": "^6.3.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
-    "vitest": "^0.34.1"
+    "vitest": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
