Visa replacing Stripe

--- a/.env.example
+++ b/.env.example
@@ -1,90 +1,27 @@
 
-# Universal Payment Protocol Environment Variables
-# Copy this file to .env and update the values for your environment
-
-# =============================================================================
-# CORE APPLICATION SETTINGS
-# =============================================================================
 NODE_ENV=development
 PORT=5000
 
-# =============================================================================
-# DATABASE CONFIGURATION
-# =============================================================================
-# Option 1: Use full DATABASE_URL
+# Database (using in-memory for demo)
 DATABASE_URL=postgresql://postgres:password@localhost:5432/upp_db
 
-# Option 2: Use individual database settings
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=upp_db
-DB_USER=postgres
-DB_PASSWORD=password
-
-# =============================================================================
-# VISA DIRECT CONFIGURATION (Native Payment Processing)
-# =============================================================================
-# For demo mode, leave these as 'demo_mode'
-# For live payments, obtain credentials from https://developer.visa.com
-VISA_USER_ID=demo_mode
-VISA_PASSWORD=demo_mode
+# Visa Direct (demo mode)
+VISA_USER_ID=lsamura@hawaii.edu
+VISA_PASSWORD=Fuckyou6533$
 VISA_CERT_PATH=/tmp/visa_cert.pem
 VISA_KEY_PATH=/tmp/visa_key.pem
 VISA_API_BASE_URL=https://sandbox.api.visa.com
 
-# =============================================================================
-# SECURITY CONFIGURATION
-# =============================================================================
-# Generate secure keys for production
+# Security
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 ENCRYPTION_KEY=your-32-character-encryption-key!!
 PCI_ENCRYPTION_KEY=your-32-character-pci-encryption-key
 FORCE_HTTPS=false
 
-# =============================================================================
-# STRIPE CONFIGURATION (Fallback/Comparison)
-# =============================================================================
-# Optional - used for comparison or fallback
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
-
-# =============================================================================
-# EXTERNAL API KEYS
-# =============================================================================
-# Exchange rates for multi-currency support
-EXCHANGE_RATE_API_KEY=your_exchange_rate_api_key
-
-# AI monitoring and error handling
-OPENAI_API_KEY=sk-your_openai_api_key_here
-ANTHROPIC_API_KEY=sk-ant-your_anthropic_api_key_here
-
-# GitHub integration for automated updates
-GITHUB_TOKEN=ghp_your_github_token_here
-GITHUB_OWNER=your_username
-GITHUB_REPO=your_repository_name
-
-# =============================================================================
-# LOGGING AND MONITORING
-# =============================================================================
-LOG_LEVEL=info
-
-# =============================================================================
-# RATE LIMITING
-# =============================================================================
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-API_RATE_LIMIT_WINDOW_MS=900000
-API_RATE_LIMIT_REQUESTS=100
-
-# =============================================================================
-# CORS CONFIGURATION
-# =============================================================================
+# CORS
 CORS_ORIGIN=http://localhost:3000
 
-# =============================================================================
-# FEATURE FLAGS
-# =============================================================================
+# Features
 ENABLE_MULTI_CURRENCY=true
 ENABLE_AUDIT_TRAIL=true
 ENABLE_AI_MONITORING=false
@@ -92,65 +29,5 @@ PCI_COMPLIANCE_MODE=true
 ENABLE_TOKENIZATION=true
 ENABLE_FRAUD_DETECTION=true
 
-# =============================================================================
-# DEVELOPMENT SETTINGS
-# =============================================================================
-# Enable debug logging in development
-DEBUG=upp:*
-
-# Webhook testing (for local development)
-WEBHOOK_SECRET=your_webhook_secret_for_testing
-
-# =============================================================================
-# PRODUCTION SETTINGS (uncomment for production)
-# =============================================================================
-# NODE_ENV=production
-# FORCE_HTTPS=true
-# CORS_ORIGIN=https://yourdomain.com
-# LOG_LEVEL=error
-
-# =============================================================================
-# PAYMENT PROCESSOR SETTINGS
-# =============================================================================
-# Default payment processor (visa_direct, stripe, mock)
-DEFAULT_PAYMENT_PROCESSOR=visa_direct
-
-# Transaction limits
-MAX_TRANSACTION_AMOUNT=10000.00
-DAILY_TRANSACTION_LIMIT=50000.00
-
-# =============================================================================
-# COMPLIANCE SETTINGS
-# =============================================================================
-# PCI DSS compliance settings
-PCI_DSS_ENABLED=true
-TOKENIZATION_ENABLED=true
-AUDIT_LOGGING_ENABLED=true
-
-# KYC verification settings
-KYC_VERIFICATION_ENABLED=false
-KYC_PROVIDER=placeholder
-
-# =============================================================================
-# NOTIFICATION SETTINGS
-# =============================================================================
-# Email notifications
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_email_password
-FROM_EMAIL=noreply@yourapp.com
-
-# Push notifications
-PUSH_NOTIFICATION_KEY=your_push_notification_key
-
-# =============================================================================
-# TESTING CONFIGURATION
-# =============================================================================
-# Test mode settings
-TEST_MODE=true
-MOCK_PAYMENTS=true
-SIMULATE_DEVICE_DISCOVERY=true
-
-# Test database (separate from production)
-TEST_DATABASE_URL=postgresql://postgres:password@localhost:5432/upp_test_db
+# Logging
+LOG_LEVEL=info
