--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Universal Payment Protocol - Any Device + Internet = Payment Terminal",
   "main": "dist/server/index.js",
   "scripts": {
-    "start": "node dist/server/index.js",
     "dev": "tsx watch server/index.ts",
     "build": "tsc",
-    "postbuild": "mkdir -p dist/src/demo && cp src/demo/DemoDashboard.html dist/src/demo/ && cp src/demo/MobileAppSimulator.html dist/src/demo/ && cp src/demo/UPPLandingPage.html dist/src/demo/ && cp src/demo/APIKeyRegistration.html dist/src/demo/ && mkdir -p dist/src/monitoring && cp src/monitoring/AIMonitoringDashboard.html dist/src/monitoring/ && mkdir -p dist/src/modules/payments && cp src/modules/payments/card-demo.html dist/src/modules/payments/",
+    "start": "node dist/server/index.js",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "type-check": "tsc --noEmit",
+    "test:coverage": "vitest --coverage",
+    "test:security": "vitest --run src/__tests__/security.test.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "security:check": "node scripts/security-check.js",
-    "security:audit": "npm audit && npm run security:check"
+    "security:enhance": "node scripts/security-enhancement.js",
+    "security:audit": "npm audit && npm run security:check && npm run security:enhance",
+    "prepare": "husky install"
   },
   "keywords": [
     "payment",
@@ -27,9 +28,8 @@
   "author": "UPP Team",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.18.0",
-    "octokit-plugin-create-pull-request": "^5.0.0",
-    "@octokit/rest": "^21.0.2",
+    "@anthropic-ai/sdk": "^0.58.0",
+    "@octokit/rest": "^22.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -38,34 +38,38 @@
     "@types/pg": "^8.15.5",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^9.0.2",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.8.1",
-    "helmet": "^7.0.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.1",
-    "openai": "^4.28.0",
-    "pg": "^8.11.1",
+    "openai": "^5.12.1",
+    "pg": "^8.13.1",
     "qrcode": "^1.5.3",
-    "redis": "^4.6.7",
-    "stripe": "^12.12.0",
-    "uuid": "^9.0.0",
+    "redis": "^5.8.0",
+    "stripe": "^18.4.0",
+    "uuid": "^11.1.0",
     "winston": "^3.10.0",
-    "zod": "^3.21.4"
+    "zod": "^4.0.15"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "eslint": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.2.0",
+    "@types/uuid": "^10.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.32.0",
     "eslint-plugin-import": "^2.32.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
-    "supertest": "^6.3.3",
-    "tsx": "^3.12.7",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.4",
+    "octokit-plugin-create-pull-request": "^6.0.1",
+    "supertest": "^7.1.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.1.6",
-    "vitest": "^1.0.0"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
