--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
+    "@types/sanitize-html": "^2.16.0",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.32.0",
     "eslint-plugin-import": "^2.32.0",
@@ -88,4 +89,3 @@
     "micromatch": "^4.0.8"
   }
 }
-
