--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.58.0",
+    "@modelcontextprotocol/sdk": "^1.17.2",
     "@octokit/rest": "^22.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.13",
