Implement Better Stack OpenTelemetry monitoring integration
- Add OpenTelemetry SDK configuration with Better Stack OTLP exporters
- Create comprehensive metrics collection for payments, devices, database operations, and security events
- Implement distributed tracing for UPP translator and database operations
- Add enhanced health check endpoint with telemetry status
- Integrate trace context with Winston logger for correlation
- Add custom UPP-specific spans and metrics for payment processing flows
- Support for environment-based telemetry configuration
- Increment version to 1.0.6

This enables production monitoring, alerting, and performance analysis of the Universal Payment Protocol
across all device types and payment flows through Better Stack's observability platform.

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ ENABLE_FRAUD_DETECTION=true
 
 # Logging
 LOG_LEVEL=info
+
+# OpenTelemetry/Better Stack Monitoring (optional)
+# Get your token from Better Stack dashboard
+BETTERSTACK_TOKEN=your-better-stack-source-token-here
+BETTERSTACK_ENDPOINT=https://your-better-stack-endpoint
