--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-payment-protocol",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Revolutionary payment processing that works with ANY internet-connected device",
   "main": "dist/index.js",
   "type": "module",
@@ -36,6 +36,17 @@
     "@anthropic-ai/sdk": "^0.58.0",
     "@modelcontextprotocol/sdk": "^1.17.2",
     "@octokit/rest": "^22.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@opentelemetry/exporter-otlp-http": "^0.26.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/instrumentation-express": "^0.52.0",
+    "@opentelemetry/instrumentation-http": "^0.203.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.51.0",
+    "@opentelemetry/instrumentation-pg": "^0.56.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
