--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "@typescript-eslint/parser": "^8.40.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.33.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
     "octokit-plugin-create-pull-request": "^6.0.1",
@@ -90,6 +92,7 @@
     "supertest": "^7.1.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
+    "prettier": "^3.3.3",
     "vitest": "^3.2.4"
   },
   "engines": {
