--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "security:check": "node scripts/security-check.js",
     "security:enhance": "node scripts/security-enhancement.js",
     "security:audit": "npm audit && npm run security:check && npm run security:enhance",
-    "prepare": "node -e \"const e=process.env; process.exit(e.CI||e.RENDER||e.NODE_ENV===\\\"production\\\"?0:1)\" || husky install"
+    "prepare": "node -e \"const e=process.env; process.exit(e.CI||e.RENDER||e.NODE_ENV===\\\"production\\\"?0:1)\" || husky install",
+    "license:prod": "npx license-checker --production --summary --onlyAllow \"MIT;ISC;Apache-2.0;BSD-2-Clause;BSD-3-Clause\"",
+    "license:all": "npx license-checker --summary --onlyAllow \"MIT;ISC;Apache-2.0;BSD-2-Clause;BSD-3-Clause\""
   },
   "keywords": [
     "payment",
@@ -60,7 +62,7 @@
     "helmet": "^8.1.0",
     "ioredis": "5.7.0",
     "jsonwebtoken": "^9.0.2",
-    "openai": "5.12.2",
+    "openai": "5.13.1",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "redis": "5.8.1",
@@ -68,13 +70,13 @@
     "stripe": "18.4.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "zod": "^3.23.8"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "24.3.0",
     "@types/sanitize-html": "^2.16.0",
-    "@types/selfsigned": "^2.0.4",
+    "@types/selfsigned": "^2.1.0",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "10.0.0",
     "@types/winston": "^2.4.4",
@@ -82,9 +84,9 @@
     "@typescript-eslint/parser": "^8.40.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.33.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
     "octokit-plugin-create-pull-request": "^6.0.1",
@@ -92,7 +94,7 @@
     "supertest": "^7.1.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "vitest": "^3.2.4"
   },
   "engines": {
